--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,32 @@ ul {
     padding: 15px 0;
 }
 
+.title {
+    font-size: 36px;
+    text-align: center;
+    font-weight: 400;
+}
+
+.button {
+    font-size: 18px;
+    font-weight: 400;
+    outline: none;
+    border: none;
+    background: #07A7EB;
+    color: #FFFFFF;
+    border-radius: 8px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.button:hover {
+    background: #45C7FF;
+}
+
+.button:active {
+    background: #017BBF;
+}
+
 .header-container {
     display: flex;
     align-items: center;
@@ -136,22 +162,7 @@ ul {
 }
 
 .button-hero {
-    font-weight: 700;
-    outline: none;
-    border: none;
-    background: #07A7EB;
     padding: 20px 120px;
-    color: #FFFFFF;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.button-hero:hover {
-    background: #45C7FF;
-}
-
-.button-hero:active {
-    background: #017BBF;
 }
 
 /* Services */
@@ -161,10 +172,7 @@ ul {
 }
 
 .services-title {
-    text-align: center;
     margin-bottom: 30px;
-    font-weight: 400;
-    font-size: 36px;
 }
 
 .services-list {
@@ -286,8 +294,6 @@ ul {
 }
 
 .about-title {
-    font-size: 36px;
-    font-weight: 400;
     margin-bottom: 26px;
 }
 
@@ -344,4 +350,89 @@ ul {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 9px 40px;
+}
+
+.request {
+    background-image: url(./images/request_image.png);
+    background-size: cover;
+}
+
+.request-container {
+    padding: 63px 0 94px;
+}
+
+.request-title {
+    margin-bottom: 65px;
+    color: #FFFFFF;
+
+}
+
+.request-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 26px 24px;
+    max-width: 794px;
+    margin: 0 auto;
+}
+
+.label {
+    position: relative;
+}
+
+.input-label::before {
+    position: absolute;
+    content: "";
+    background-image: url(./images/origin.svg);
+    width: 12.75px;
+    height: 11.25px;
+    top: 50%;
+    left: 20.75px;
+    transform: translateY(-50%)
+}
+
+.input-label-two::before {
+    position: absolute;
+    content: "";
+    background-image: url(./images/name.svg);
+    width: 15px;
+    height: 15px;
+    top: 50%;
+    left: 18.5px;
+    transform: translateY(-50%)
+}
+
+.input-label-three::before {
+    position: absolute;
+    content: "";
+    background-image: url(./images/tel.svg);
+    width: 13.5px;
+    height: 13.5px;
+    top: 50%;
+    left: 19.25px;
+    transform: translateY(-50%)
+}
+
+.form-input {
+    width: 100%;
+    height: 58px;
+    background: #FFFFFF;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    padding: 19px 18px 19px 46px;
+}
+
+.request-msg {
+    grid-column: 1/3;
+    resize: none;
+    height: 124px;
+    outline: none;
+    background: #FFFFFF;
+    border-radius: 8px;
+    padding: 19px 17px 17px;
+}
+
+.request-btn {
+    grid-column: 1/3;
+    padding: 19px 147px;
 }
