--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ ul {
     font-size: 36px;
     text-align: center;
     font-weight: 400;
+    color: #000000;
 }
 
 .button {
@@ -295,6 +296,9 @@ ul {
 
 .about-title {
     margin-bottom: 26px;
+    font-size: 36px;
+    line-height: 48px;
+    font-weight: normal;
 }
 
 .about-detail {
@@ -355,6 +359,7 @@ ul {
 .request {
     background-image: url(./images/request_image.png);
     background-size: cover;
+    background-position: center 0;
 }
 
 .request-container {
@@ -383,8 +388,8 @@ ul {
     position: absolute;
     content: "";
     background-image: url(./images/origin.svg);
-    width: 12.75px;
-    height: 11.25px;
+    width: 11.25px;
+    height: 12.75px;
     top: 50%;
     left: 20.75px;
     transform: translateY(-50%)
@@ -435,4 +440,82 @@ ul {
 .request-btn {
     grid-column: 1/3;
     padding: 19px 147px;
+}
+
+.information {
+    padding: 63px 0 96px;
+    background: #FFFFFF;
+    margin: 0 auto;
+}
+
+.information-title {
+    margin-bottom: 73px;
+}
+
+.contact-information {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 60px;
+}
+
+.map {
+    padding: 0;
+    margin: 0;
+    max-width: 610px;
+    max-height: 360px;
+    background-color: yellow;
+    font-size: 45px;
+    text-align: center;
+}
+
+.info-title {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 19px;
+}
+
+.information-contact-list {
+    position: relative;
+    margin-bottom: 36px;
+}
+
+.information-cont {
+    font-size: 16px;
+    margin-bottom: 17px;
+}
+
+.information-name {
+    padding-left: 40px;
+}
+
+.information-name::before {
+    background-image: url(./images/location_inf.svg);
+    content: "";
+    position: absolute;
+    width: 18.5px;
+    height: 18.5px;
+    top: 50%;
+    left: 1.75px;
+    transform: translateY(-50%)
+}
+
+.information-item {
+    list-style-image: url(./images/tel.svg);
+    list-style-position: inside;
+}
+
+.information-tel {
+    font-size: 22px;
+    margin-left: 17.25px;
+}
+
+.information-email-name {
+    text-decoration: none;
+    color: black;
+    margin-left: 31.5px;
+}
+
+.information-email {
+    background-image: url(./images/mail_info.svg);
+    background-repeat: no-repeat;
 }
