--- a/styles.css
+++ b/styles.css
@@ -452,16 +452,20 @@ ul {
     margin-bottom: 73px;
 }
 
-.contact-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 .contact-information {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 60px;
+}
+
+.map {
+    padding: 0;
+    margin: 0;
+    max-width: 610px;
+    max-height: 360px;
+    background-color: yellow;
+    font-size: 45px;
+    text-align: center;
 }
 
 .info-title {
@@ -470,7 +474,13 @@ ul {
     margin-bottom: 19px;
 }
 
-.information-cont:not(:last-child) {
+.information-contact-list {
+    position: relative;
+    margin-bottom: 36px;
+}
+
+.information-cont {
+    font-size: 16px;
     margin-bottom: 17px;
 }
 
@@ -485,7 +495,7 @@ ul {
     width: 18.5px;
     height: 18.5px;
     top: 50%;
-    left: 2px;
+    left: 1.75px;
     transform: translateY(-50%)
 }
 
@@ -496,13 +506,13 @@ ul {
 
 .information-tel {
     font-size: 22px;
-    margin-left: 17px;
+    margin-left: 17.25px;
 }
 
 .information-email-name {
     text-decoration: none;
     color: black;
-    margin-left: 31px;
+    margin-left: 31.5px;
 }
 
 .information-email {
