--- a/styles.css
+++ b/styles.css
@@ -458,14 +458,12 @@ ul {
     column-gap: 60px;
 }
 
-.map {
-    padding: 0;
-    margin: 0;
+.information-cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 360px;
     max-width: 610px;
-    max-height: 360px;
-    background-color: yellow;
-    font-size: 45px;
-    text-align: center;
 }
 
 .info-title {
@@ -476,12 +474,6 @@ ul {
 
 .information-contact-list {
     position: relative;
-    margin-bottom: 36px;
-}
-
-.information-cont {
-    font-size: 16px;
-    margin-bottom: 17px;
 }
 
 .information-name {
@@ -492,27 +484,30 @@ ul {
     background-image: url(./images/location_inf.svg);
     content: "";
     position: absolute;
-    width: 18.5px;
-    height: 18.5px;
+    width: 19px;
+    height: 19px;
     top: 50%;
-    left: 1.75px;
-    transform: translateY(-50%)
+    left: 2px;
+    transform: translateY(50%)
 }
 
 .information-item {
+    margin-bottom: 17px;
     list-style-image: url(./images/tel.svg);
     list-style-position: inside;
 }
 
 .information-tel {
+    color: black;
+    text-decoration: none;
     font-size: 22px;
-    margin-left: 17.25px;
+    margin-left: 17px;
 }
 
 .information-email-name {
     text-decoration: none;
     color: black;
-    margin-left: 31.5px;
+    margin-left: 32px;
 }
 
 .information-email {
