--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ ul {
     border-radius: 8px;
     cursor: pointer;
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 .button:hover {
@@ -89,6 +90,7 @@ ul {
 
 .header-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
@@ -163,8 +165,11 @@ ul {
 .hero-list-item {
     list-style-position: inside;
     color: #FFFFFF;
-    margin-bottom: 32px;
     list-style-image: url(./images/Vector.svg);
+}
+
+.hero-list-item:not(:last-child) {
+    margin-bottom: 32px;
 }
 
 .item {
@@ -187,8 +192,9 @@ ul {
 }
 
 .services-list {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(420px, 1fr))
 }
 
 .services-item {
@@ -278,9 +284,10 @@ ul {
 }
 
 .services-item-title {
+    max-width: 380px;
     font-weight: 700;
     font-size: 1.375rem;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
 }
 
 .services-item-description {
@@ -532,8 +539,6 @@ ul {
 .footer-one {
     display: flex;
     justify-content: space-around;
-   /* display: grid;
-    grid-template-columns: repeat(4, 1fr); */
     border-bottom: 1px solid #95CEE7 ;
     padding-bottom: 50px;
     background-size: 100%;
@@ -628,6 +633,8 @@ ul {
     margin-right: 35px;
 }
 
+
+
 /* responsive design */
 
 @media screen and (max-width: 1370px) {
@@ -636,10 +643,90 @@ ul {
         font-size: 14px;
     }
     .container {
-        max-width: 92%;
+        max-width: 90%;
+    }
+
+    .header-logo svg {
+        max-width: 200px;
     }
 
     .hero {
         background-position: left;
+    }
+
+    .hero-list {
+        margin-bottom: 50px;
+    }
+}
+
+
+
+@media screen and (max-width: 915px) {
+    html {
+        font-size: 12px;
+    }
+
+    .container {
+        max-width: 90%;
+    }
+
+    .header-logo svg {
+        max-width: 140px;
+        width: 100%;
+    }
+
+    .header-nav {
+        width: 100%;
+        order: 2;
+        margin-top: 20px;
+    }
+
+    .nav-list {
+        margin: 0 auto;
+        width: max-content;
+    }
+
+    .hero-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero-title {
+        font-size: 3rem;
+        text-align: center;
+        line-height: inherit;
+    }
+
+}
+
+
+@media screen and (max-width: 550px) {
+    .button {
+        width: 70%;
+        padding: 20px 0;
+    }
+
+    .nav-list {
+        flex-direction: column;
+        text-align: center;
+        }
+
+    .list-item {
+        margin: 0 0 10px;
+        }
+
+    .hero-title {
+        font-size: 2.2rem;
+        text-align: center;
+    }
+
+    .hero-list {
+        font-size: 1.2rem;
+        margin-bottom: 40px;
+    }
+
+    .hero-list-item {
+        margin-bottom: 16px;
     }
 }
