--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,7 @@ ul {
     background-color: transparent;
     outline: none;
     font-weight: 700;
+    font-size: 1.125rem;
 }
 
 .button-about:hover {
@@ -370,6 +371,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 9px 40px;
+    place-items: center;
 }
 
 .request {
@@ -538,10 +540,12 @@ ul {
 
 .footer-one {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     border-bottom: 1px solid #95CEE7 ;
     padding-bottom: 50px;
     background-size: 100%;
+    margin-bottom: 29px;
 }
 
 .for-clients-title {
@@ -558,18 +562,19 @@ ul {
     margin-bottom: 33px;
 }
 
+.socmedia-list {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+
 .socmedia-list-title {
+    grid-column: 1/4;
     white-space: nowrap;
     width: 100%;
 }
 
-.socmedia-list {
-    flex-wrap: wrap;
-    display: flex;
-}
-
 .socmedia-list-icon:not(:last-child) {
-    margin-right: 19px;
+    
 }
 
 .footer-contacts {
@@ -620,7 +625,6 @@ ul {
 }
 
 .footer-two {
-    margin-top: 29px;
     display: flex;
     justify-content: space-between;
 }
@@ -657,13 +661,23 @@ ul {
     .hero-list {
         margin-bottom: 50px;
     }
+
+    .map {
+        width: 100%;
+    }
+
+    .footer-logo {
+        width: 100%;
+        text-align: center;
+    }
 }
 
 
 
-@media screen and (max-width: 915px) {
+@media screen and (max-width: 900px) {
     html {
         font-size: 12px;
+        width: 100%;
     }
 
     .container {
@@ -698,12 +712,57 @@ ul {
         line-height: inherit;
     }
 
+    .about-container {
+        padding: 0 0 0 25px;
+    }
+
+    .contact-information {
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 30px;
+        place-items: center;
+    }
+
+     .information-cont {
+        grid-row: 1/2;
+        justify-content: space-evenly;
+    }
+
+    .for-clients-list {
+        width: 35%;
+    }
+
+    .footer-worktime-socmedia{
+        width: 35%;
+        margin-bottom: 30px;
+    }
+
+    .socmedia-list {
+        grid-column-gap: 10px;
+        width: fit-content;
+    }
+   
+    .information-title {
+        margin-bottom: 35px;
+    }
+
+    .information-email {
+        padding-bottom: 10px;
+    }
+
+    .footer-two-more {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer-more-item:not(:last-child) {
+        margin-bottom: 5px;
+    }
 }
 
 
 @media screen and (max-width: 550px) {
     .button {
-        width: 70%;
+        width: 80%;
         padding: 20px 0;
     }
 
@@ -728,5 +787,53 @@ ul {
 
     .hero-list-item {
         margin-bottom: 16px;
+    }
+
+    .services-list {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    .button-about {
+        font-weight: inherit;
+        font-size: 1.125rem;
+        width: 70%;
+        padding: 20px 0;
+    }
+    .request-btn {
+        width: 100%;
+    }
+
+    .information-name {
+        padding-left: 25px;
+}
+
+    .information-name::before {
+        left: -4px;
+    }
+
+    .information-tel {
+        margin-left: 0px;
+        font-size: 1.2rem;
+    }
+
+    .information-email-name {
+        margin-left: 25px;
+    }
+
+    .footer-logo-img {
+        width: 170px;
+    }
+
+    .footer-button {
+        width: 100%;
+    }
+
+    .footer-two {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .copyright {
+        margin-bottom: 5px;
     }
 }
